# AITX-SAT-2026

./: .env.example  .gitignore  Procfile  README.md  analysis.ipynb  design-qa.md  prepare.py  program.md  pyproject.toml  results.tsv  train.py
api/: index.py
benchmarks/: run_benchmark.py
benchmarks/results/: v0.json  v0.md
config/: agents.yaml
config/policies/: search-cache.yaml
dashboard/: app.js  autoresearch.html  episodic_memory.json  index.html  layout-fixes.css  style.css
dashboard/data/: autoresearch_experiments.json
dashboard/demos/: discord-live.html  rsi-evidence.html
data/: latest_rsi_eval.json  model_metrics.csv  radar_snapshots.json  rsi_runs.csv
docs/: apis-datasets-access.md  architecture.excalidraw  discord_bot_bridging.md  ecommerce_agent_proposal.md  episodic-memory.md  recursive_intelligence_evaluation.md  rsi-world.html  system-status-2026-07-18.md  unified_ecommerce_agent_architecture.md  verifiers-results-to-video.md
identity/: AGENTS.team.md
infra/: README.md
output/: discord-rsi.json
prompts/: rsi_video_from_csv.md
research/: champion-lessons.md
sage-cron-publisher/: SKILL.md
scripts/: auto_research_loop.py  auto_rsi_nightly.sh  dashboard_api.py  export_teacher_dataset.py  ingest_marketplace.py  inject-identity.sh  nemotron_coordinator.py  nightly_master_cycle.py  post_rsi_discord.py  prepare_rsi_story.py  search_cache_service.py  seed_autoresearch_history.py  verifiers_to_rsi_csv.py  wire-discord-bots.sh
supabase-readonly/: SKILL.md  supabase_readonly.py
supabase-readonly-proxy/: Dockerfile  server.py
(+23 files in other folders)
